...
  return (
    <View style={styles.container}>
      <View style={styles.row}>
        <Text>{title}</Text>
        <Button
          title={'Break the app'}
          testID={'break_app_button'}
          onPress={toggleAppBroken}
          disabled={isLoading}
          color={'#aa2222'}
        />
      </View>

...
